Colaboratory を使用して作成しました

--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMBu2VRDNOj6XOqsv1tCL8g",
+      "authorship_tag": "ABX9TyMfYsf82nQjPk1otF1aHeq3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -385,35 +385,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ffedd0a-bfb6-4ece-e9e6-cb46ffa1a045"
+        "outputId": "b6435196-74de-4d34-ee44-8613093158e2"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "np.random.random(50)"
+        "np.random.randint(0,10,50) # 0 は入るが 10 は入らない"
       ],
-      "execution_count": null,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.89987083, 0.09021133, 0.44401825, 0.82802678, 0.11405989,\n",
-              "       0.9073675 , 0.54284947, 0.10613434, 0.36188362, 0.72612249,\n",
-              "       0.95776608, 0.74558036, 0.95677002, 0.4827585 , 0.15188497,\n",
-              "       0.5976021 , 0.12035158, 0.94824508, 0.32441584, 0.64687022,\n",
-              "       0.56074689, 0.68740291, 0.37354257, 0.93868433, 0.14437441,\n",
-              "       0.82057471, 0.78575671, 0.56165376, 0.39319129, 0.2501131 ,\n",
-              "       0.47232091, 0.67533993, 0.53714957, 0.66630889, 0.69666573,\n",
-              "       0.25077177, 0.86775063, 0.27611125, 0.10150716, 0.05325688,\n",
-              "       0.64586448, 0.5177337 , 0.21691794, 0.22172285, 0.7370456 ,\n",
-              "       0.79683418, 0.41156377, 0.18704322, 0.14839555, 0.55797882])"
+              "array([8, 8, 8, 4, 8, 4, 4, 5, 7, 8, 7, 8, 8, 5, 3, 3, 8, 0, 3, 8, 3, 9,\n",
+              "       3, 4, 4, 0, 7, 5, 4, 0, 3, 6, 5, 7, 6, 9, 0, 5, 4, 5, 5, 5, 0, 5,\n",
+              "       2, 6, 8, 6, 2, 9])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 156
         }
       ]
     },
@@ -3173,7 +3166,7 @@
         "\n",
         "# これはこれでよいが、辺が飛び出さないようにするにはどうしたらよいか考える"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3234,7 +3227,7 @@
         "print(size)\n",
         "plt.show()"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
