--- a/linear_horiuchi.ipynb
+++ b/linear_horiuchi.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_horiuchi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNAv2d1X7wHQAwAP8P94qGF",
+      "authorship_tag": "ABX9TyNN07bVStdRKaOdAzRDyvDU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
         "id": "81fU3lFkKGSv"
       },
       "source": [
-        "# メモ\r\n",
-        "\r\n",
-        "線形代数学 堀内龍太郎，浦部治一郎 学術図書出版社\r\n",
-        "\r\n",
+        "# メモ\n",
+        "\n",
+        "線形代数学 堀内龍太郎，浦部治一郎 学術図書出版社\n",
+        "\n",
         "を読む。"
       ]
     },
@@ -44,17 +44,41 @@
         "id": "kdElVRx8XtzR"
       },
       "source": [
-        "はじめのあたりは何言っているかわからない。  \r\n",
-        "\r\n",
-        "やさしく導入しているつもりらしいので、これが効く生徒もいるのだろう。  \r\n",
-        "\r\n",
-        "単語だけリストしておく。位置ベクトル $\\overrightarrow{\\mathrm{OP}}$ 。 普通の数式のアルファベットは自然にイタリックになるので、この場合はわざわざ \\mathrm と指定する必要がある。\r\n",
-        "\r\n",
-        "2つの移動 $\\overrightarrow{\\mathrm{PQ}}$ と $\\overrightarrow{\\mathrm{QR}}$ をつづけると新たな移動 $\\overrightarrow{\\mathrm{PR}}$ となる。\r\n",
-        "\r\n",
-        "ベクトルのスカラー倍 $pe_1$\r\n",
-        "\r\n",
-        "いろいろな数の集合 $Q,R,C$  \r\n"
+        "はじめのあたりは何言っているかわからない。  \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bJobLqsrnXBq"
+      },
+      "source": [
+        "%%latex\n",
+        "すべての~n~次元の実数ベクトルがつくる集合を~R^n~で表す。 \\\\\n",
+        "この集合の要素には~2~つの演算; 和とスカラー倍が定義される。\\\\[0.8em]\n",
+        "\n",
+        "\\bm{u,v,w} \\in R^n~と~λ,μ \\in R~に対し次が成り立つ。\\\\\n",
+        "1.~任意の~\\bm{u,v}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gblurRgCnWOK"
+      },
+      "source": [
+        "やさしく導入しているつもりらしいので、これが効く生徒もいるのだろう。  \n",
+        "\n",
+        "単語だけリストしておく。位置ベクトル $\\overrightarrow{\\mathrm{OP}}$ 。 普通の数式のアルファベットは自然にイタリックになるので、この場合はわざわざ \\mathrm と指定する必要がある。\n",
+        "\n",
+        "2つの移動 $\\overrightarrow{\\mathrm{PQ}}$ と $\\overrightarrow{\\mathrm{QR}}$ をつづけると新たな移動 $\\overrightarrow{\\mathrm{PR}}$ となる。\n",
+        "\n",
+        "ベクトルのスカラー倍 $pe_1$\n",
+        "\n",
+        "いろいろな数の集合 $Q,R,C$  \n"
       ]
     },
     {
@@ -63,42 +87,42 @@
         "id": "YtLxE6KLZdA7"
       },
       "source": [
-        "数ベクトル\r\n",
-        "\r\n",
-        "$n$ 個の数 $x_1,x_2,\\cdots,x_n$ を順序をつけて横向きに並べた $(x_1,x_2,\\cdots,x_n)$ を$n$ 次元数ベクトルという。 実ベクトル、複素ベクトル、横ベクトル、行ベクトル。\r\n",
-        "\r\n",
-        "縦に並べた\r\n",
-        "$\r\n",
-        "\\begin{pmatrix}\r\n",
-        "x_1 \\\\\r\n",
-        "x_2 \\\\\r\n",
-        "\\vdots \\\\\r\n",
-        "x_n\r\n",
-        "\\end{pmatrix}\r\n",
-        "$\r\n",
-        "は縦ベクトル、列ベクトル。\r\n"
+        "数ベクトル\n",
+        "\n",
+        "$n$ 個の数 $x_1,x_2,\\cdots,x_n$ を順序をつけて横向きに並べた $(x_1,x_2,\\cdots,x_n)$ を$n$ 次元数ベクトルという。 実ベクトル、複素ベクトル、横ベクトル、行ベクトル。\n",
+        "\n",
+        "縦に並べた\n",
+        "$\n",
+        "\\begin{pmatrix}\n",
+        "x_1 \\\\\n",
+        "x_2 \\\\\n",
+        "\\vdots \\\\\n",
+        "x_n\n",
+        "\\end{pmatrix}\n",
+        "$\n",
+        "は縦ベクトル、列ベクトル。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Ha_t0vlqanqa",
-        "outputId": "77ce9525-ca05-48ab-893c-1d63e9b75938",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "outputId": "77ce9525-ca05-48ab-893c-1d63e9b75938"
       },
       "source": [
-        "%%latex\r\n",
-        "\\begin{pmatrix}\r\n",
-        "    x_1 \\\\\r\n",
-        "    x_2 \\\\\r\n",
-        "    \\vdots \\\\\r\n",
-        "    x_n\r\n",
+        "%%latex\n",
+        "\\begin{pmatrix}\n",
+        "    x_1 \\\\\n",
+        "    x_2 \\\\\n",
+        "    \\vdots \\\\\n",
+        "    x_n\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -129,10 +153,10 @@
         "id": "VyFn4dAEVvUX"
       },
       "source": [
-        "すべての $n$ 次元の実数ベクトルがつくる集合を $R^n$ で表す。  \r\n",
-        "この集合の要素には 2つの演算; 和とスカラー倍が定義される。\r\n",
-        "\r\n",
-        "$u,v,w \\in R^n$ と $λ,μ \\in R$ に対し次が成り立つ。  \r\n",
+        "すべての $n$ 次元の実数ベクトルがつくる集合を $R^n$ で表す。  \n",
+        "この集合の要素には 2つの演算; 和とスカラー倍が定義される。\n",
+        "\n",
+        "$u,v,w \\in R^n$ と $λ,μ \\in R$ に対し次が成り立つ。  \n",
         "任意の $ \\bm{u,v}"
       ]
     },
