Colaboratory を使用して作成しました

--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOixjqQ7WGF8eE/SumGrfkL",
+      "authorship_tag": "ABX9TyOeYmWfzkqzzUTUpYbOhV7A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
         "    , horizontalalignment='center'\n",
         "    , verticalalignment='center')\n",
         "plt.axis('off')\n",
-        "plt.savefig(\"temp.svg\", format=\"svg\")\n",
+        "# plt.savefig(\"temp.svg\", format=\"svg\")\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -130,6 +130,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Y9kwAKDpjti"
+      },
+      "source": [
+        "出力を svg で保存した場合のダウンロードの方法"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -140,6 +149,7 @@
         "outputId": "2cd2290f-b6c5-4528-989c-ca1079d04571"
       },
       "source": [
+        "# 出力を svg で保存した場合のダウンロードの方法\n",
         "# from google.colab import files\n",
         "# files.download('temp.svg')"
       ],
@@ -213,21 +223,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VGE9WHBZ0Mgo"
-      },
-      "source": [
-        "上のように import japanize_matplotlib とすれば matplotlib で日本語が使えるようになる。\n",
-        "\n",
-        "Colab のいろんな機能はすべて日本語が使えるが、matplotlib だけエラーになる。 理由があるのだろうが、いずれ直るのかもしれないが、とりあえず、日本語は使わないか、もしくは japanize_matplotlib を install, import する。\n",
-        "\n",
-        "今の考え: 日本語は使わない。\n",
-        "\n",
-        "&nbsp;"
       ]
     },
     {
@@ -2170,12 +2165,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "agTqcEfliIpH",
-        "outputId": "fc7ac9f1-3ae1-4dd7-8e2e-5250ab487962",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 189
-        }
+        },
+        "id": "agTqcEfliIpH",
+        "outputId": "fc7ac9f1-3ae1-4dd7-8e2e-5250ab487962"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
