--- a/math_gunron_yukieakihiko.ipynb
+++ b/math_gunron_yukieakihiko.ipynb
@@ -6,7 +6,7 @@
       "name": "math_gunron_yukieakihiko.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2epcyAtk9LMKF49vS2tqo",
+      "authorship_tag": "ABX9TyO/Bc/JnqBdEexlv52Th3ka",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "# メモ\n",
         "\n",
-        "代数学1群論入門\n",
+        "代数学 1 群論入門\n",
         "\n",
         "雪江明彦\n",
         "\n",
@@ -70,7 +70,91 @@
         "\n",
         "$A \\subset B$ は $A = B$ を含むとする。\n",
         "\n",
-        "$A \\subsetneq B$"
+        "$A \\subset B$ で $A \\neq B$ なら、$A$ は $B$ の真部分集合と言い、\n",
+        "$A \\subsetneq B$ と書く。 流儀によっては $A \\subset B$ を真部分集合の意味にで使うこともあるので注意が必要である。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g_kaTgQF92iv"
+      },
+      "source": [
+        "$A \\not \\subset B$ は $A \\subset B$ の否定である。つまり、$A \\backslash B$ が空集合でないことを意味する。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9u_0ugMm-Y0e",
+        "outputId": "769c9dab-63ad-4a38-dc86-a5ca097754d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "A = {1,2,3,4,5}\n",
+        "B = {3,4,5,6,7}\n",
+        "type (A)\n",
+        "print (A)\n",
+        "print (B)\n",
+        "print (A.union(B))\n",
+        "print (A.intersection(B))\n",
+        "print (A.difference(B))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 3, 4, 5}\n",
+            "{3, 4, 5, 6, 7}\n",
+            "{1, 2, 3, 4, 5, 6, 7}\n",
+            "{3, 4, 5}\n",
+            "{1, 2}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FkmMBVKS_nIP"
+      },
+      "source": [
+        "**直積** $\\quad A, B$ が集合のとき、"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yTJPFJcX-f_K",
+        "outputId": "3f84737c-40f9-4e7f-81bd-effc0dc3bd5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type (A)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "set"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
       ]
     }
   ]
