Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -66,16 +66,15 @@
         "\n",
         "Colab で latex を書くには 3 通りある。\n",
         "\n",
-        "1. マークダウンでテキストセルに書く。 \n",
-        "2. %%latex マジックでコードセルに書く。 \n",
-        "3. from sympy import *, from IPython.display import Markdown, display(Markdown(\"\")) で表示する。\n",
+        "1. テキストセル内でマークダウンで &dollar; マークを使って書く\n",
+        "2. コードセル内で `%%latex` マジックを使って書く\n",
+        "3. コードセル内で IPython.display.Markdown で書く\n",
         "\n",
+        "マークダウンで書くのが基本。  \n",
         "\n",
-        "マークダウンで書くのが基本なので、基本に従うべきところは従う。  \n",
+        "colab の latex は完全な latex ではない。 mathjax ベースのサブセットである。 数式を書くのに便利。\n",
         "\n",
-        " %%latex マジックのアウトプットは印刷時に崩れる。 %%latex は完全な latex ではない。 mathjax ベースのサブセットである。latex のソースと結果のアウトプットの両方が見えて学習上効果的なのでその限りにおいて利用する。\n",
-        "\n",
-        "sympy と IPython を使うのはプログラムがメインのときなので、課題の解答の中に説明を加えたいときなどに使う。\n"
+        "sympy と IPython を使うのはプログラムがメインのときなので、このノートブックでは課題の解答の中に説明を加えたいときなどに使う。\n"
       ]
     },
     {
@@ -133,7 +132,11 @@
         "x = 3\n",
         "$$\n",
         "\n",
-        "とか。"
+        "とか。\n",
+        "\n",
+        "これは &dollar; マークで囲むとインライン、%\\dollar;%\\dollar; で囲むと段落を変えて、センタリングして表示する。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -147,7 +150,7 @@
         "outputId": "66922116-5978-4ac1-c3fe-d0d76f9c4d0d"
       },
       "source": [
-        "# 実験学習\n",
+        "# 実験 python プログラムで表示する\n",
         "from sympy import *\n",
         "from IPython.display import Markdown\n",
         "display(Markdown(\"実験学習 $x = 3$ と書く\"))\n",
@@ -180,6 +183,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6u5e3oI2nCzx"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
