Colaboratory を使用して作成しました

--- a/chartmatha01probability1.ipynb
+++ b/chartmatha01probability1.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmatha01probability1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMOosLIckFEEU0X1fdL58GQ",
+      "authorship_tag": "ABX9TyPPKg+qcxX6ogxyAkWVqz6B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,19 +42,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_a6M_m7GzGkF"
-      },
-      "source": [
-        "# 場合の数と確率"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "bcYyItYWzVHS"
       },
       "source": [
-        "# 集合とその要素の個数"
+        "# 集合"
       ]
     },
     {
@@ -278,10 +269,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "uzsqzwLdR8bX",
-        "outputId": "a207eba7-a1cd-480b-cad4-24c95fcb3c74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a207eba7-a1cd-480b-cad4-24c95fcb3c74"
       },
       "source": [
         "U = {1,2,3,4,5,6,7,8,9}\n",
@@ -293,7 +284,7 @@
         "print(U.difference(A).intersection(U.difference(B)))\n",
         "print(U.difference(A).union(U.difference(B)))\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,10 +313,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wrBjJtDtUFtC",
-        "outputId": "6b9bc2b3-0d08-4e16-9df5-acc9dde3b1c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b9bc2b3-0d08-4e16-9df5-acc9dde3b1c7"
       },
       "source": [
         "U = {1,2,3,4,5,6,7,8,9}\n",
@@ -336,7 +327,7 @@
         "print(A.intersection(U.difference(B)))\n",
         "print(U.difference(A).intersection(U.difference(B)))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,15 +338,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Xc3FHDG0_dHT"
-      },
-      "source": [
-        "# いまここ p.219"
       ]
     },
     {
@@ -379,7 +361,132 @@
       "source": [
         "基本例題 2 p.219 つづき\n",
         "\n",
-        "1 以上\n"
+        "1 以上 100 以下の整数全体の集合を $U$ を全体集合として考える。\n",
+        "\n",
+        "$A=\\{x\\;|\\;\\; x$ はある整数の平方$,\\;\\;x \\in U\\}$\n",
+        "\n",
+        "$B=\\{x\\;|\\;\\; x$ は偶数$,\\;\\;x \\in U\\}$\n",
+        "\n",
+        "$C=\\{x\\;|\\;\\; x$ は 4 の倍数$,\\;\\;x \\in U\\}$\n",
+        "\n",
+        "とするとき $C \\subset \\overline A \\cup \\overline B$ であることを示す。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jWK8Nnh-JIgx",
+        "outputId": "edb87075-1e05-4914-92bc-38b7249c4ae5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "U = set(range(1,101))\n",
+        "A = {n*n for n in range(1,11) if n*n in U}\n",
+        "B = {2*n for n in range(1,51) if 2*n in U}\n",
+        "C = {4*n for n in range(1,26) if 4*n in U}\n",
+        "print(A)\n",
+        "print(B)\n",
+        "print(C)\n",
+        "D = U.difference(C)\n",
+        "E = U.difference(A).union(U.difference(B))\n",
+        "print(D.issubset(E))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{64, 1, 4, 36, 100, 9, 16, 49, 81, 25}\n",
+            "{2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100}\n",
+            "{4, 8, 12, 16, 20, 24, 28, 32, 36, 40, 44, 48, 52, 56, 60, 64, 68, 72, 76, 80, 84, 88, 92, 96, 100}\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OFmuHyQGNFWq"
+      },
+      "source": [
+        "基本例題 3 p. 220 \n",
+        "\n",
+        "$A= \\{n\\;|\\;\\; n$ は 16 の正の約数 $\\}$、\n",
+        "\n",
+        "$B= \\{n\\;|\\;\\; n$ は 20 の正の約数 $\\}$、\n",
+        "\n",
+        "$C=\\{n\\;|\\;\\; n$ は 8 以下の正の偶数 $\\}$、\n",
+        "\n",
+        "とするとき次の集合を求める。\n",
+        "\n",
+        "1. $A \\cap B \\cap C$\n",
+        "2. $A \\cup B \\cup C$\n",
+        "3. $(A \\cap B) \\cup C$\n",
+        "4. $(A \\cap C) \\cup (B \\cap C)$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eOhACKmJOX4S",
+        "outputId": "71680da0-864e-4029-be25-ede382fb5c6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "A = {1,2,4,8,16}\n",
+        "B = {1,2,4,5,10,20}\n",
+        "C = {2,4,6,8}\n",
+        "print(A.intersection(B).intersection(C))\n",
+        "print(A.union(B).union(C))\n",
+        "print((A.intersection(B)).union(C))\n",
+        "print((A.intersection(C)).union(B.intersection(C)))"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{2, 4}\n",
+            "{1, 2, 4, 5, 6, 8, 10, 16, 20}\n",
+            "{1, 2, 4, 6, 8}\n",
+            "{2, 4, 8}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rXIR2XLzPYgf"
+      },
+      "source": [
+        "# 集合の要素の個数"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9SCi4Wz2QFs6"
+      },
+      "source": [
+        "**個数定理**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xc3FHDG0_dHT"
+      },
+      "source": [
+        "# いまここ p.221"
       ]
     }
   ]
