Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -134,7 +134,9 @@
         "\n",
         "とか。\n",
         "\n",
-        "これは &dollar; マークで囲むとインライン、%\\dollar;%\\dollar; で囲むと段落を変えて、センタリングして表示する。\n",
+        "これは \\\\$ マークで囲むとインライン、\\\\$\\\\$ で囲むと段落を変えて、センタリングして表示する。\n",
+        "\n",
+        "これは &dollar; マークで囲むとインライン、&dollar;&dollar; で囲むと段落を変えて、センタリングして表示する。\n",
         "\n",
         "&nbsp;\n"
       ]
