Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPoYDY/NTwyKOfhNAenSPsa",
+      "authorship_tag": "ABX9TyNG4pqR4ncNl/+IpZRZ0I7a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,9 +130,9 @@
         "\n",
         "変数を含む言明であっても、$\\forall$ や $\\exists$ がつくと命題になる。 全称記号や存在記号を限量子 quantifier と言う。\n",
         "\n",
-        "$p = \\forall x p(x) \\quad$ 任意の $x$ に対して $p(x)$ である。\n",
+        "$p = \\forall x \\; p(x) \\quad$ 任意の $x$ に対して $p(x)$ である。\n",
         "\n",
-        "$q = \\exists y q(4,y)$ %\\quad$ ある整数 $y$ が存在して $q(4,y)$ である。\n",
+        "$q = \\exists y \\; q(4,y) \\quad$ ある整数 $y$ が存在して $q(4,y)$ である。\n",
         "\n",
         "ドメインは次のように明示することもある。\n",
         "\n",
@@ -144,9 +144,9 @@
         "\n",
         "全称記号、存在記号の順序によって意味が異なる。\n",
         "\n",
-        "$p = \\forall x \\exists y (x-y)^2=4 \\quad$ True\n",
+        "$p = \\forall x \\; \\exists y \\; (x-y)^2=4 \\quad$ True\n",
         "\n",
-        "$p = \\exists y \\forall x (x-y)^2=4 \\quad$ False\n",
+        "$p = \\exists y \\; \\forall x \\; (x-y)^2=4 \\quad$ False\n",
         "\n",
         "一般に存在記号で修飾された変数は、その左側にある全称記号で修飾された変数に依存してよい。 全称記号で修飾された変数がなければ、依存する変数はなく定数となる。\n",
         "\n",
@@ -171,11 +171,11 @@
       "source": [
         "例 1.1 p.4 次の表現の意味を説明し、真偽を示す。 ドメインは整数。\n",
         "\n",
-        "1. $\\exists y\\forall x\\ [x+y=x]$ \n",
+        "1. $\\exists y \\; \\forall x \\; \\ [x+y=x]$ \n",
         "\n",
         "ある $y$ が存在しすべての $x$ について、$x+y=x$ が成立する。 $y$ が 0 ならば成立するので真。\n",
         "\n",
-        "2. $\\forall x \\exists y [x+y=0]$\n",
+        "2. $\\forall x \\; \\exists y \\; [x+y=0]$\n",
         "\n",
         "任意の $x$ について $x+y=0$ となる $y$ が存在する。 $-x$ が存在するので真。\n",
         "\n",
@@ -198,9 +198,9 @@
         "\n",
         "一般に、限量記号 (全称記号、存在記号) を伴った命題の否定についてまとめると次のようになる。\n",
         "\n",
-        "$\\neg (\\forall x p(x)) = \\exists \\neg p(x))\\quad$ $\\neg p(x) となる $x$ が存在する\n",
+        "$\\neg (\\forall x \\; p(x)) = \\exists x \\; \\neg p(x))\\quad$ $\\neg p(x)$ となる $x$ が存在する\n",
         "\n",
-        "$\\neg (\\exists x p(x)) = \\forall x \\neg p(x) \\quad$ 任意の $x$ について $\\neg p(x)$ である。\n",
+        "$\\neg (\\exists x \\; p(x)) = \\forall x \\; \\neg p(x) \\quad$ 任意の $x$ について $\\neg p(x)$ である。\n",
         "\n",
         "&nbsp;\n",
         "\n"
@@ -209,10 +209,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NgSshufVV_Xq"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "UNigDoFTawm8"
       },
       "source": [
-        "選言 $\\quad p \\lor q \\quad (p or q)$\n",
+        "選言 $\\quad p \\lor q \\quad (p \\; or \\; q)$\n",
         "\n",
         "連言 $\\quad p \\land q \\quad (p and q)$"
       ]
