--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNG4pqR4ncNl/+IpZRZ0I7a",
+      "authorship_tag": "ABX9TyNFmYryD7WvVGXMPdoYU5hY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,9 +221,41 @@
         "id": "UNigDoFTawm8"
       },
       "source": [
-        "選言 $\\quad p \\lor q \\quad (p \\; or \\; q)$\n",
+        "選言 $\\quad p \\lor q \\quad (p \\;\\mathrm{or}\\: q)$\n",
         "\n",
-        "連言 $\\quad p \\land q \\quad (p and q)$"
+        "連言 $\\quad p \\land q \\quad (p \\;\\mathrm{and}\\; q)$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uKJ7YyUMKCzP"
+      },
+      "source": [
+        "ド・モルガン律 p.6\n",
+        "\n",
+        "$\\neg (p \\lor q) = \\neg p \\land \\neg q$\n",
+        "\n",
+        "$\\neg (p \\land q) = \\neg p \\lor \\neg q$\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "排他的選言 (排他的論理和 exlusive or) $\\quad (p\\;\\mathrm{xor}\\; q)$\n",
+        "\n",
+        "同値 $\\quad (p\\;\\mathrm{equiv}\\; q)$\n",
+        "\n",
+        "$p \\rightarrow q$ 含意 (がんい) $\\quad (p\\;\\mathrm{imp}\\; q)$\n",
+        "\n",
+        "排他的選言 (exlusive or) は排他的論理和とも言う。\n",
+        "\n",
+        "$\\quad p\\;\\mathrm{xor}\\; q = (p \\land \\neg q) \\lor (\\neg p \\land q)$\n",
+        "\n",
+        "これは見方を変えると\n",
+        "\n",
+        "p.7\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ]
