Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPJN4HtCkoIHN0WUl+U4Vpt",
+      "authorship_tag": "ABX9TyMt2sc/kVgod8zxRb/weO/p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,15 +209,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NgSshufVV_Xq"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "UNigDoFTawm8"
       },
       "source": [
@@ -261,17 +252,51 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "6yEXOSPaZw-4"
       },
       "source": [
-        "含意 p.7\n",
+        "含意 p.7,8\n",
         "\n",
-        "一般に、条件付き命題は、"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "一般に、条件付き命題は、条件の命題 $p$ と結論の命題 $q$ からなる複合命題で、含意 implication と言う。 演算記号として $\\rightarrow$ を使う。\n",
+        "\n",
+        "含意 $\\quad p \\;\\rightarrow\\; q\\quad (p\\;\\mathrm{imp}\\; q)$\n",
+        "\n",
+        "含意は $p$ が真、 $q$ が偽のときのみ偽となり、 $p$ が偽のときは常に真である。\n",
+        "\n",
+        "含意について次の性質は重要である。\n",
+        "\n",
+        "$p \\;\\rightarrow\\; q \\;=\\; \\neg q \\;\\rightarrow\\; \\neg q$\n",
+        "\n",
+        "$p \\;\\rightarrow\\; q \\;=\\; \\neg p \\lor q$\n",
+        "\n",
+        "含意の否定は次のようになる。\n",
+        "\n",
+        "$\\neg (p \\;\\rightarrow\\; q) \\;=\\; (p \\land \\neg q)$\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NgSshufVV_Xq"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Gy-F0vJ09A8y"
+      },
+      "source": [
+        "証明について p.9,10\n",
+        "\n",
+        "$a,b,c$ を実数として、"
+      ]
     }
   ]
 }
