Colaboratory を使用して作成しました

--- a/math_calc_ordinarydiff.ipynb
+++ b/math_calc_ordinarydiff.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "math_calc_ordinarydiff.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPGmitVZkK1G+u4OGoHMxYC",
+      "authorship_tag": "ABX9TyN4r1xkjKtrB3fZ3IGkDb4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,21 +391,27 @@
         "$$\\frac{dy}{dx} = \\frac{d}{dx}(v+2) = \\frac{dv}{dx} = \\frac{dv}{du}\\frac{du}{dx} = \\frac{dv}{du}\\frac{d}{dx}(x-1) = \\frac{dv}{du}$$\n",
         "を用いた。\n",
         "\n",
-        "このように $x$ , $y$ から*u*,*v*への変数変換を施すと、例題1で見た形の方程式となり、右辺の分母分子を*u*で割ることによって同次形の微分方程式として扱うことができる。そして*u*,*v*の式として同次形の微分方程式を解いた後、変数を*u*,*v*から $x$ , $y$ に戻せば、求めるべき微分方程式の解が得られる。\n",
+        "このように $x$ , $y$ から $ u $ , $ v $ への変数変換を施すと、例題 1で見た形の方程式となり、右辺の分母分子を $ u $ で割ることによって同次形の微分方程式として扱うことができる。そして $ u $ , $ v $ の式として同次形の微分方程式を解いた後、変数を $ u $ , $ v $ から $x$ , $y$ に戻せば、求めるべき微分方程式の解が得られる。\n",
+        "\n",
+        "&nbsp;\n",
         "\n"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "agGPVbCuhwGI"
       },
       "source": [
         "#### 例題3\n",
         "\n",
-        "微分方程式$y' = \\frac{2x + 3y - 4}{4x + 6y - 3}$を解く。\n",
+        "微分方程式\n",
         "\n",
-        "これは、例題2のようにして連立方程式を解こうとしても、連立方程式の解が存在しないか、あるいは1つに定まらない場合である。このような場合は、右辺の分母を*z*と置くことによって一般解を求めることができる。\n",
+        "$$y' = \\frac{2x + 3y - 4}{4x + 6y - 3}$$\n",
+        "\n",
+        "を解く。\n",
+        "\n",
+        "これは、例題 2 のようにして連立方程式を解こうとしても、連立方程式の解が存在しないか、あるいは1つに定まらない場合である。このような場合は、右辺の分母を $z$ と置くことによって一般解を求めることができる。\n",
         "\n",
         "この問題では、\n",
         "\n",
@@ -425,9 +430,7 @@
         "\\end{align}$$\n",
         "と変形できる。この左辺に$z = 4x + 6y - 3$を代入すれば求めるべき微分方程式の一般解が求まる。\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -439,7 +442,7 @@
         "\n",
         "微分方程式$y' = \\frac{2x + 3y - 4}{3}$を解く。\n",
         "\n",
-        "これは、例題3と同様に連立方程式を解こうとしても解が一意に定まらず、かつ、分母が定数になっている場合である。この場合は右辺を*z*と置けばよい。\n",
+        "これは、例題3と同様に連立方程式を解こうとしても解が一意に定まらず、かつ、分母が定数になっている場合である。この場合は右辺を $z$ と置けばよい。\n",
         "\n",
         "$$z = \\frac{2x + 3y - 4}{3}$$ とおくと、\n",
         "\n",
@@ -717,7 +720,7 @@
         "となるから、ここで$z = y^{1-n}$とおくと、$z' = (1-n)y^{-n}y'$なので、\n",
         "\n",
         "$$z' + f(x)(1-n)z = g(x)(1-n)$$\n",
-        "となる。これは*z*に関する1階線型微分方程式であるから、定数変化法あるいは積分因子を用いる方法によって計算することができて、一般解\n",
+        "となる。これは $z$ に関する1階線型微分方程式であるから、定数変化法あるいは積分因子を用いる方法によって計算することができて、一般解\n",
         "\n",
         "$$z = e^{-(1-n)\\int f(x)dx} \\left\\{(1-n)\\int g(x)e^{(1-n)\\int f(x)dx} dx + C\\right\\}$$\n",
         "を得る。これに$z=y^{1-n}$を代入しなおすと、\n",
