--- a/math_calc_ordinarydiff.ipynb
+++ b/math_calc_ordinarydiff.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_calc_ordinarydiff.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4r1xkjKtrB3fZ3IGkDb4U",
+      "authorship_tag": "ABX9TyPbOhD/I+1TYW+i7rEqBnvy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,7 +381,9 @@
         "$$\\begin{cases}\n",
         "x = u + 1 \\\\\n",
         "y = v + 2\n",
-        "\\end{cases}$$ とおく。これをもとの微分方程式へ代入すると、\n",
+        "\\end{cases}$$ \n",
+        "\n",
+        "とおく。これをもとの微分方程式へ代入すると、\n",
         "\n",
         "$$\\begin{align}\n",
         "\\frac{dy}{dx} &= \\frac{2(u+1) + 3(v+2) - 8}{(u+1) - (v+2) + 1} \\\\\n",
