Colaboratory を使用して作成しました

--- a/math_calc_ordinarydiff.ipynb
+++ b/math_calc_ordinarydiff.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_calc_ordinarydiff.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWgsuG5V6wqHDATOZq3+bM",
+      "authorship_tag": "ABX9TyOuLPrx0Z4md05tnNmc34Xp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,11 @@
         "\n",
         "pandoc -f mediawiki -t markdown math_calc_ordinarydiff.wiki -o output.md\n",
         "\n",
-        "の実験\n"
+        "の実験\n",
+        "\n",
+        "https://ja.wikibooks.org/wiki/解析学基礎/常微分方程式\n",
+        "\n",
+        "を pandoc してみた。 そこそこ使える。"
       ]
     },
     {
@@ -336,7 +340,7 @@
         "\n",
         "を解く。\n",
         "\n",
-        "これは、$g(x,y)$ と $h(x,y)$ がともにすべての項で $x$ , $y$ について同次であるような場合である。例えばこのような場合には、右辺の分子と分母を $x^2$ で割ることで\n",
+        "これは、$g(x,y)$ と $h(x,y)$ がともにすべての項で  $x, y$ について同次であるような場合である。例えばこのような場合には、右辺の分子と分母を $x^2$ で割ることで\n",
         "\n",
         "$$y' = \\frac{2 + 3(y/x) + (y/x)^2}{1 - 4(y/x) + 2(y/x)^2}$$\n",
         "\n",
@@ -345,15 +349,6 @@
         "&nbsp;\n",
         "\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ozLM0y5dh32E"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -368,7 +363,7 @@
         "$$y' = \\frac{2x + 3y -8}{x - y + 1}$$\n",
         "を解く。\n",
         "\n",
-        "これは、$g(x,y)$ と $h(x,y)$ がともに $x$ , $y$ の1次式になっている場合である。例えばこのような場合は、次の手順で解くことができることが知られている。\n",
+        "これは、$g(x,y)$ と $h(x,y)$ がともに  $x, y$ の1次式になっている場合である。例えばこのような場合は、次の手順で解くことができることが知られている。\n",
         "\n",
         "はじめに、連立方程式\n",
         "\n",
@@ -392,9 +387,10 @@
         "\\end{align}$$ となる。ここで、\n",
         "\n",
         "$$\\frac{dy}{dx} = \\frac{d}{dx}(v+2) = \\frac{dv}{dx} = \\frac{dv}{du}\\frac{du}{dx} = \\frac{dv}{du}\\frac{d}{dx}(x-1) = \\frac{dv}{du}$$\n",
+        "\n",
         "を用いた。\n",
         "\n",
-        "このように $x$ , $y$ から $ u $ , $ v $ への変数変換を施すと、例題 1で見た形の方程式となり、右辺の分母分子を $ u $ で割ることによって同次形の微分方程式として扱うことができる。そして $ u $ , $ v $ の式として同次形の微分方程式を解いた後、変数を $ u $ , $ v $ から $x$ , $y$ に戻せば、求めるべき微分方程式の解が得られる。\n",
+        "このように  $x, y$ から  $u, v$ への変数変換を施すと、例題 1で見た形の方程式となり、右辺の分母分子を  $u$で割ることによって同次形の微分方程式として扱うことができる。そして  $u, v$ の式として同次形の微分方程式を解いた後、変数を  $u, v$ から  $x, y$ に戻せば、求めるべき微分方程式の解が得られる。\n",
         "\n",
         "&nbsp;\n",
         "\n"
@@ -406,7 +402,7 @@
         "id": "agGPVbCuhwGI"
       },
       "source": [
-        "#### 例題3\n",
+        "#### 例題 3\n",
         "\n",
         "微分方程式\n",
         "\n",
@@ -424,6 +420,7 @@
         "である。また、\n",
         "\n",
         "$$z' = 4 + 6y'$$\n",
+        "\n",
         "であるから、この微分方程式は変数分離形へと変形することができて\n",
         "\n",
         "$$\\begin{align}\n",
@@ -431,96 +428,173 @@
         "    \\frac{z}{7z-15}z' &= 1 \\\\\n",
         "\\int\\frac{z}{7z-15}dz &= x + C\n",
         "\\end{align}$$\n",
-        "と変形できる。この左辺に$z = 4x + 6y - 3$を代入すれば求めるべき微分方程式の一般解が求まる。\n",
+        "\n",
+        "と変形できる。この左辺に $z = 4x + 6y - 3$ を代入すれば求めるべき微分方程式の一般解が求まる。\n",
+        "\n",
+        "&nbsp;\n",
         "\n"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "MsMN4btyiBej"
       },
       "source": [
         "#### 例題 4\n",
         "\n",
-        "微分方程式$y' = \\frac{2x + 3y - 4}{3}$を解く。\n",
+        "微分方程式\n",
         "\n",
-        "これは、例題3と同様に連立方程式を解こうとしても解が一意に定まらず、かつ、分母が定数になっている場合である。この場合は右辺を $z$ と置けばよい。\n",
+        "$$y' = \\frac{2x + 3y - 4}{3}$$\n",
         "\n",
-        "$$z = \\frac{2x + 3y - 4}{3}$$ とおくと、\n",
+        "を解く。\n",
+        "\n",
+        "これは、例題 3と同様に連立方程式を解こうとしても解が一意に定まらず、かつ、分母が定数になっている場合である。この場合は右辺を $z$ と置けばよい。\n",
+        "\n",
+        "$$z = \\frac{2x + 3y - 4}{3}$$ \n",
+        "\n",
+        "とおくと、\n",
         "\n",
         "$$z' = \\frac{2 + 3y'}{3} = \\frac{2 + 3z}{3}$$\n",
-        "となる。これは変数分離形の微分方程式であるから、その方法に従って解いた後で$z = \\frac{2x + 3y - 4}{3}$を代入すれば求めるべき一般解が得られる。\n",
         "\n",
+        "となる。これは変数分離形の微分方程式であるから、その方法に従って解いた後で\n",
+        "\n",
+        "$$z = \\frac{2x + 3y - 4}{3}$$\n",
+        "\n",
+        "を代入すれば求めるべき一般解が得られる。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_qd795nVXPKi"
+      },
+      "source": [
         "#### 例題 5\n",
         "\n",
-        "微分方程式$y' = \\frac{x^2y}{x^3+y}$を解く。\n",
+        "微分方程式\n",
+        "\n",
+        "$$y' = \\frac{x^2y}{x^3+y}$$\n",
+        "\n",
+        "を解く。\n",
         "\n",
         "これは、同次形をさらに一般化させた微分方程式である。同次形では、正規形の微分方程式\n",
         "\n",
-        "$$y' = f(x,y)$$ の右辺$f(x,y)$について、$\\lambda$を定数として\n",
+        "$$y' = f(x,y)$$ \n",
+        "\n",
+        "の右辺 $f(x,y)$ について、$\\lambda$ を定数として\n",
         "\n",
         "$$f(\\lambda x, \\lambda y) = f(x, y)$$\n",
-        "が成り立つ。この例題は同次形ではないため、微分方程式の右辺を$f(x,y)$と置いてもこれは成り立たない。しかし、\n",
+        "\n",
+        "が成り立つ。この例題は同次形ではないため、微分方程式の右辺を $f(x,y)$ と置いてもこれは成り立たない。しかし、\n",
         "\n",
         "$$f(\\lambda x, \\lambda^3y) = \\frac{(\\lambda x)^2\\lambda^3y}{(\\lambda x)^3 + \\lambda^3y} = \\lambda^2\\frac{x^2y}{x^3+y} = \\lambda^2f(x,y)$$\n",
+        "\n",
         "が成り立っている。\n",
         "\n",
-        "一般に、$f(x,y)$について$n \\neq 0$として\n",
+        "一般に、$f(x,y)$ について $n \\neq 0$ として\n",
         "\n",
-        "$$f(\\lambda x, \\lambda^n y) = \\lambda^{n-1}f(x, y)$$ が成り立つとき、\n",
+        "$$f(\\lambda x, \\lambda^n y) = \\lambda^{n-1}f(x, y)$$ \n",
+        "\n",
+        "が成り立つとき、\n",
         "\n",
         "$$z = \\frac{y}{x^n}$$\n",
+        "\n",
         "とおいて変数変換を施し、式変形を行うことで変数分離形へ持ち込むことができることが知られている。\n",
         "\n",
-        "この例題では、$z = \\frac{y}{x^3}$と置くと、$y = x^3z$であるから\n",
+        "この例題では、$z = \\frac{y}{x^3}$ と置くと、$y = x^3z$ であるから\n",
         "\n",
-        "$$y' = 3x^2z + x^3z'$$ これをもとの微分方程式へ代入すると、\n",
+        "$$y' = 3x^2z + x^3z'$$ \n",
+        "\n",
+        "これをもとの微分方程式へ代入すると、\n",
         "\n",
         "$$\\begin{align}\n",
         "3x^2z + x^3z' &= \\frac{x^2x^3z}{x^3+x^3z} \\\\\n",
         "              &= \\frac{x^2z}{1+z} \\\\\n",
         "           z' &= -\\frac{3z^2 + 2z}{x(1+z)}\n",
         "\\end{align}$$\n",
-        "となる。これは変数分離形の微分方程式であるから、変数分離形の解法に従って解き、最後に$z = \\frac{y}{x^3}$を代入すればよい。\n",
         "\n",
-        "1階線型微分方程式\n",
+        "となる。これは変数分離形の微分方程式であるから、変数分離形の解法に従って解き、最後に $z = \\frac{y}{x^3}$ を代入すればよい。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hCtenSHUXhOh"
+      },
+      "source": [
+        "1 階線型微分方程式\n",
         "-----------------\n",
         "\n",
         "1階微分方程式が線型であるとは、与えられた微分方程式が\n",
         "\n",
         "$$y' + f(x)y = g(x)$$\n",
+        "\n",
         "と書けることである。このように書けない1階微分方程式は1階非線型微分方程式という。\n",
         "\n",
-        "### 斉次1階線型微分方程式\n",
+        "&nbsp;\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ozLM0y5dh32E"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xB2VGrg2YEVr"
+      },
+      "source": [
+        "### 斉次 1 階線型微分方程式\n",
         "\n",
-        "斉次1階線型微分方程式とは、1階線型微分方程式であって、特に$g(x)=0$であるものをいい、この時この微分方程式は斉次であるという。\n",
-        "$g(x) \\neq 0$の場合は非斉次であるという。また、斉次は「同次」とも呼ばれることがあるが、本書では前者で統一することにする。\n",
+        "斉次 1 階線型微分方程式とは、1 階線型微分方程式であって、特に $g(x)=0$ であるものをいい、この時この微分方程式は斉次であるという。\n",
+        "\n",
+        "$g(x) \\neq 0$ の場合は非斉次であるという。また、斉次は「同次」とも呼ばれることがあるが、本書では前者で統一することにする。\n",
         "\n",
         "まずは斉次1階線型微分方程式を解いてみよう。\n",
+        "\n",
         "簡単な微分積分法しか知らない我々は、これ程までに限定してやっと解けるようになるのである。\n",
         "\n",
         "今解こうとしているのは、次の微分方程式である。\n",
         "\n",
         "$$y' + f(x)y = 0$$\n",
-        "これは変数分離形の微分方程式である。まず$y \\ne 0$を仮定して、この式を同値変型する。\n",
         "\n",
-        "$${{y'} \\over {y}} = -f(x)$$ 両辺を積分して\n",
+        "これは変数分離形の微分方程式である。まず $y \\ne 0$ を仮定して、この式を同値変型する。\n",
+        "\n",
+        "$${{y'} \\over {y}} = -f(x)$$ \n",
+        "\n",
+        "両辺を積分して\n",
         "\n",
         "$${\\rm ln}|y| = \\int{ - f(x)dx + C_0}$$ 両辺を*e*の肩に掛けて、\n",
         "\n",
         "$$|y| = e^{\\int{ - f(x) dx + C_0}}$$\n",
-        "右は常に正なので、$e^{C_0}=C$として、\n",
+        "\n",
+        "右は常に正なので、$e^{C_0}=C$ として、\n",
         "\n",
         "$$y = Ce^{\\int{ - f(x)dx}}$$\n",
         "\n",
         "この解法を**変数分離法**といい、得られた結果がこの斉次方程式の一般解である。\n",
         "\n",
-        "一般解はこのようにして求められたが、$y(x_0)=y_0$となるときの特殊解 $y$ を求めなければならないときもある。斉次1階微分方程式の初期値問題について考えてみよう。\n",
+        "一般解はこのようにして求められたが、$y(x_0)=y_0$ となるときの特殊解 $y$ を求めなければならないときもある。斉次1階微分方程式の初期値問題について考えてみよう。\n",
         "\n",
-        "初期値問題\n",
+        "**初期値問題**\n",
         "\n",
-        "$$y' + f(x)y = 0 ; y(x_0)=y_0$$ を解く。\n",
+        "$$y' + f(x)y = 0 ; y(x_0)=y_0$$ \n",
+        "\n",
+        "を解く。\n",
         "\n",
         "はじめに微分方程式を解くと、先に導いたように一般解\n",
         "\n",
@@ -541,6 +615,15 @@
         "\\end{align}$$\n",
         "結局、一般解における積分定数*C*が$y_0$に、不定積分が定積分になっただけであった。\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2XBMK1aWYLIn"
+      },
+      "source": [
         "#### 例題1\n",
         "\n",
         "微分方程式$y' -4xy = 0$を解く。\n",
