Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPo5bNAgJiNAZdAB3op4wlZ",
+      "authorship_tag": "ABX9TyMaVSh0HfPae5mDvUS4OQhq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,6 +214,55 @@
         "1. セルを実行しながら読む\n",
         "\n",
         "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L5SpdTQiyiBJ"
+      },
+      "source": [
+        "# 数式番号を振る\n",
+        "markdown 数式番号\n",
+        "\n",
+        "[Jupyter Notebook]Markdown の数式に数式番号を振って、参照する\n",
+        "cf. \\label{a}\n",
+        "\n",
+        "\n",
+        "$$y'+ f(x)y = g(x) \\tag {1.5}$$\n",
+        "\n",
+        "$$y'+ f(x)y = g(x) \\label {a} \\tag{1.2}$$\n",
+        "\n",
+        "$\\ref{a}$ はラベルです。\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial u}{\\partial t} = \\alpha \\nabla ^2 u \\label{a}\\tag{1}\n",
+        "$$\n",
+        "$(\\ref{a})$は熱拡散方程式です。\n",
+        "\n",
+        "$\n",
+        "\\begin{equation}\n",
+        "\\frac{\\partial u}{\\partial t} = \\alpha \\nabla ^2 u \\label{b}\\tag{2}\n",
+        "\\end{equation}\n",
+        "$\n",
+        "\n",
+        "$(\\ref{b})$も熱拡散方程式です。\n",
+        "\n",
+        "$$ x \\label {c} \\tag {8.5}$$\n",
+        "\n",
+        "$(\\ref{c})$も熱拡散方程式です。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ILgl3YRk1RC5"
+      },
+      "source": [
+        "$$\n",
+        "\\frac{\\partial u}{\\partial t} = \\alpha \\nabla ^2 u \\label{a}\\tag{1}\n",
+        "$$\n",
+        "$(\\ref{a})$は熱拡散方程式です。"
       ]
     },
     {
